2017-09-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use gnome.genmarshal if glib is new enough

	* meson.build: check whether glib version >= 2.53.4.
	* libbalsa/imap/meson.build: use gnome.genmarshal if glib is new
	enough; otherwise, use glib-genmarshal directly instead of in a
	sh command.
	* libbalsa/meson.build: ditto.

2017-09-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use --output option of glib-genmarshal

	* libbalsa/imap/meson.build:
	* libbalsa/meson.build:

2017-09-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use include_directories instead of explicit -I…

	* libbalsa/imap/meson.build:
	* libbalsa/meson.build:
	* libinit_balsa/meson.build:
	* libnetclient/meson.build:
	* libnetclient/test/meson.build:
	* meson.build:
	* src/meson.build:

2017-09-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/filter-run-dialog.c: include filter-funcs.h instead of
	libbalsa/filter-funcs.h, same as elsewhere.

2017-09-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-app.c (balsa_find_iter_by_data): we no longer ever define
	BALSA_DEBUG_THREADS.

2017-09-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove 'debug-threads' option

	* meson.build: do not use it.
	* meson_options.txt: do not define it.

2017-09-23  Albrecht Dreß <albrecht.dress@arcor.de>

	Remove deprecated gdk_threads_* stuff

	In an attempt to clean up the code and to simplify the configure
	file, this patch:
	* removes gdk_threads_(enter|leave) calls from the code,
	* removes the related “--enable-debug-threads” configure option and
	* replaces the calls to gdk_threads_add_idle() by g_idle_add().

	* configure.ac:
	* libbalsa/address-view.c (lbav_ensure_blank_line):
	* libbalsa/identity.c (sd_response_ok):
	* libbalsa/information.c (libbalsa_information_idle_handler):
	* libbalsa/libbalsa-gpgme-cb.c (get_passphrase_idle):
	* libbalsa/libbalsa.c (ask_idle), (libbalsa_ask):
	* libbalsa/libbalsa.h:
	* libbalsa/mailbox.c (libbalsa_mailbox_close),